--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tracing-appender = "0.2.2"
 serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 chrono = "0.4.26"
+rand = "0.8.5"
