--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
 name = "william_shakespeare_rust"
-authors = ["M2rsh"]
-repository = "https://github.com/M2rsh/WilliamShakespeare-Rust"
-license = "GPL-3.0"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tracing = "0.1.23"
-tracing-subscriber = {version = "0.3", features = ["env-filter"] }
-tracing-appender = "0.2.2"
-serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
-chrono = "0.4.26"
-rand = "0.8.5"
+log = "0.4.20"
+log4rs = { version = "1.2.0", features = [ "background_rotation", "rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller" ] }
+poise = "0.5.7"
+poise_macros = "0.6.0"
+regex = "1.10.2"
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
