--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,10 @@
 [package]
-name = "william_shakespeare_rust"
+name = "william_shakespeare"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-log = "0.4.20"
-log4rs = { version = "1.2.0", features = [ "background_rotation", "rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller" ] }
-poise = "0.5.7"
-poise_macros = "0.6.0"
+poise = "0.6.1"
 rand = "0.8.5"
 rand_distr = "0.4.3"
-regex = "1.10.2"
-tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.39.2", features = ["rt-multi-thread"]}
