Embed and gay command

--- a/Settings.toml
+++ b/Settings.toml
@@ -1,7 +1,24 @@
-discord_token=""
-rig_ids=[287769937139990529]
+discord_token = ""
+rig_ids = [287769937139990529]
 
 [emojis]
-bigbrain="<:bigbrain:1268667620136058960>"
-nobrain="<:smoothbrain:1268667601077272589>"
-justbrain=":brain:"
+big_brain = "<:bigbrain:1268667620136058960>"
+no_brain = "<:smoothbrain:1268667601077272589>"
+just_brain = ":brain:"
+big_gay = [
+    "<:ace:1269308923102367744>",
+    "<:trains:1269308913325445132>",
+    "<:non_binary:1269308901803823267>",
+    "<:lesbean:1269308888436441088>",
+    "<:gender_water:1269308875153084498>",
+    "<:gay:1269308860376551555>",
+    "<:demi_girl:1269308847672266853>",
+    "<:panama:1269308834795749508>",
+    "<:demi_boy:1269308824028975196>",
+    "<:agay_gay:1269308810128920648>",
+    "<:aromantic:1269308791112077404>",
+    "<:bigender:1269308778520776756>",
+    "<:aro_ace:1269308765883072512>"
+]
+smol_gay = "<:half_gay:1269310211290566746>"
+no_gay = "<:no_gay:1269310453230600212>"
