too lazy to write anything

--- a/Settings.toml
+++ b/Settings.toml
@@ -1,5 +1,7 @@
-discord_token = ""
-rig_ids = [287769937139990529]
+discord_token = "I love big gay men"
+certified_big_pp = [287769937139990529]
+certified_big_brain = [287769937139990529]
+ultra_gay = [846298981797724161]
 
 [emojis]
 big_brain = "<:bigbrain:1268667620136058960>"
