--- a/Settings.toml
+++ b/Settings.toml
@@ -1,7 +1,7 @@
-discord_token = "I love big gay men"
+discord_token = ""
 certified_big_pp = [287769937139990529]
 certified_big_brain = [287769937139990529]
-ultra_gay = [846298981797724161]
+ultra_gay = [846298981797724161, 1157485383853019157]
 
 [emojis]
 big_brain = "<:bigbrain:1268667620136058960>"
